PIRATE-2982 Fix alignment of feature text on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -380,6 +380,7 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 .widget.feature {
 	border-right: 1px solid darken(@color-swatch6, 50%);
 	height: 100%;
+    text-align: center;
 }
 
 .widget.feature .feature-bgimg .content {
